<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MF Tau</string>
    <string name="community_name">Młodzież\nFranciszkańska\nTAU</string>
    <string name="cd_more_options_btn">Więcej opcji</string>
    <string name="cd_profile_pic">Zdjęcie profilowe</string>
    <string name="cd_main_screen_btn">Przejdź na ekran %s</string>
    <string name="cd_navigate_up">Cofnij na poprzedni ekran</string>
    <string name="mftau_website" translatable="false">mftau.pl</string>
    <string name="statute">Statut</string>
    <string name="readings">Czytelnia</string>
    <string name="breviary">Brewiarz</string>
    <string name="gospel">Ewangelia</string>
    <string name="song_book">Śpiewnik</string>
    <string name="people">Ludzie</string>
    <string name="meetings">Spotkania</string>
    <string name="community_logo">Logo wspólnoty MF Tau</string>
    <string name="menu_description">Menu z opcjami zalogowania się oraz otworzeniem ustawień.</string>
    <string name="sign_in">Zaloguj</string>
    <string name="sign_up">Zarejestruj</string>
    <string name="sign_out">Wyloguj</string>
    <string name="reset_password">Resetuj hasło</string>
    <string name="reset_password_dialog_msg" tools:ignore="Typos">Na Twój adres mailowy została wiadomość z linkiem do zmiany hasła.</string>
    <string name="delete_account">Usuń konto</string>
    <string name="delete_account_dialog_title">Usuwanie konta</string>
    <string name="delete_account_dialog_msg">Jesteś pewny, że chcesz usunąć konto z systemu?</string>
    <string name="delete_account_success">Konto zostało usunięte</string>
    <string name="register">Zarejestruj</string>
    <string name="settings">Ustawienia</string>
    <string name="ok" translatable="false">OK</string>
    <string name="ask_for_pray">Poproś o modlitwę</string>
    <string name="report_error">Zgłoś błąd</string>
    <string name="no_internet_title">Brak Internetu</string>
    <string name="no_internet_reconnect_message">Wystąpił problem z połączeniem internetowym, chcesz spróbować ponownie?</string>
    <string name="no_internet_data_message">Brak dostępu do Internetu, wyświetlane dane mogą być nieaktualne!</string>
    <string name="try_again">Spróbuj</string>
    <string name="loading">Ładowanie…</string>
    <string name="copy">Skopiuj</string>
    <string name="copied_to_clipboard">Skopiowano do schowka!</string>
    <string name="save">Zapisz</string>
    <string name="load">Załaduj</string>
    <string name="stop">Przerwij</string>
    <string name="undo">Cofnij</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="discard">Odrzuć</string>
    <string name="keep_editing">Pozostań</string>
    <string name="delete">Usuń</string>
    <string name="close_dialog">Zamknij okno</string>
    <string name="empty_field_error">To pole nie może być puste!</string>
    <string name="unsaved_changes_dialog_title">Niezapisane zmiany</string>
    <string name="unsaved_changes_dialog_msg">Jeśli wyjdziesz, wprowadzone zmiany zostaną odrzucone. Jesteś pewny?</string>
    <string name="cd_clear_field">Wyczyść pole</string>
    <string name="stop_action_title">Przerwanie akcji</string>
    <string name="stop_download_dialog_msg">Jesteś pewny, że chcesz przerwać pobieranie?</string>
    <string name="choose_pdf_viewer">Wybierz przeglądarkę PDF</string>
    <string name="no_pdf_viewer_dialog_title">Brak przeglądarek PDF</string>
    <string name="no_pdf_viewer_dialog_msg">Na telefonie nie znaleziono żadnej przeglądarki plików PDF. Jeśli chcesz otworzyć ten plik, musisz najpierw zainstalować przeglądarkę.</string>
    <string name="notification_dialog_title">Powiadomienia</string>
    <string name="notification_ask_dialog_message">Czy chcesz otrzymywać powiadomienia na temat wspólnoty?</string>
    <string name="notification_denied_dialog_message">Jeśli będziesz chciał włączyć powiadomienia, możesz zrobić to w ustawieniach aplikacji.</string>
    <string name="send_mail">Wyślij maila</string>
    <string name="send_mail_error">Nie znaleziono żadnego klienta mailowego!</string>
    <string name="email_name">Imię</string>
    <string name="intention">Intencja</string>
    <string name="error_description">Opis problemu</string>
    <string name="empty_email_name_error">Imię nie może być puste!</string>
    <string name="empty_email_intention_error">Intencja nie może być pusta!</string>
    <string name="empty_email_description_error">Opis nie może być pusty!</string>
    <string name="privacy_policy_part1">Oświadczam, iż zapoznałem(-am) się i akceptuję\u0020</string>
    <string name="privacy_policy_part2">zasady ochrony danych osobowych</string>
    <string name="rodo_error_message">Aby wysłać wiadomość musisz zaakceptować zasady ochrony danych osobowych!</string>
    <string name="email">Email</string>
    <string name="clear_email">Wyczyść email</string>
    <string name="password">Hasło</string>
    <string name="show_password">Pokaż hasło</string>
    <string name="hide_password">Ukryj hasło</string>
    <string name="back_to_sign_in">Powrót do logowania</string>
    <string name="forgot_password">Zapomniałem hasło</string>
    <string name="create_account">Utwórz konto</string>
    <string name="email_error_invalid" tools:ignore="Typos">Nieprawidłowy adres mailowy.</string>
    <string name="email_error_no_user">Nie znaleziono konta powiązanego z tym adresem!</string>
    <string name="email_error_user_exists" tools:ignore="Typos">Istnieje już konto przypisane do tego adresu!</string>
    <string name="password_error_empty">Podaj hasło!</string>
    <string name="password_error_too_short">Hasło musi mieć co najmniej 8 znaków.</string>
    <string name="password_error_wrong">Hasło musi składać się z małych i dużych liter oraz cyfr.</string>
    <string name="password_error_invalid">Wpisano złe hasło!</string>
    <string name="send">Wyślij</string>
    <string name="cancel">Anuluj</string>
    <string name="message_sent">Wysłano wiadomość</string>
    <string name="sign_up_error">Błąd w trakcie rejestracji, sprawdź swoje połączenie i spróbuj ponownie za kilka minut!</string>
    <string name="sign_up_successful_dialog_title">Zarejestrowano</string>
    <string name="sign_up_successful_dialog_message">Aby korzystać z konta musisz zatwierdzić je poprzez kliknięcie linku w wiadomości na mailu.</string>
    <string name="signed_in">Zalogowano</string>
    <string name="sign_in_error">Błąd w trakcie logowania, sprawdź swoje połączenie i spróbuj ponownie za kilka minut!</string>
    <string name="verify_email_dialog_title">Weryfikacja maila</string>
    <string name="verify_email_dialog_message" tools:ignore="Typos">Aby korzystać z konta musisz zatwierdzić adres mailowy. Jeśli chcesz, możesz ponowić wysłanie wiadomości.</string>
    <string name="verify_email_send_again">Ponów</string>
    <string name="reset_password_dialog_title">Resetowanie hasła</string>
    <string name="reset_password_dialog_message" tools:ignore="Typos">Wpisz adres mailowy:</string>
    <string name="reset_password_error">Resetowanie nieudane, sprawdź połączenie i poprawność adresu!</string>
    <string name="search">Szukaj</string>
    <string name="song_book_search">Szukanie w śpiewniku</string>
    <string name="song_book_filter">Filtrowanie śpiewnika</string>
    <string name="empty_search_list">Nie znaleziono żadnej pieśni z podanym wyrażaniem!</string>
    <string name="change_font_size">Zmiana wielkości tekstu</string>
    <string name="lower_font_size">Zmniejszenie wielkość tekstu</string>
    <string name="increase_font_size">Zwiększenie wielkość tekstu</string>
    <string name="max_size_msg">Została już ustawiona maksymalna wielkość!</string>
    <string name="min_size_msg">Została już ustawiona minimalna wielkość!</string>
    <string name="example_text">Przykładowy tekst:</string>
    <string name="example_song" translatable="false">Ref. Zabierz mnie, pójdziemy razem,\nja się chwycę twego sznura,\nzdejmę buty, żeby lepiej czuć kamienie.</string>
    <string name="reset">Reset</string>
    <string name="add_to_playlist">Dodaj do playlist</string>
    <string name="add_to_favourites">Dodaj do ulubionych</string>
    <string name="move_song_up">Przesuń utwór do góry</string>
    <string name="move_song_down">Przesuń utwór w dół</string>
    <string name="remove_from_playlist">Usuń z playlisty</string>
    <string name="song_removed">Usunięto utwór</string>
    <string name="remove_from_favourites">Usuń z ulubionych</string>
    <string name="save_playlist">Zapisz playlistę</string>
    <string name="playlist_name">Nazwa playlisty</string>
    <string name="new_playlist_name">Nazwa nowej playlisty</string>
    <string name="playlists_updated">Zaktualizowano playlisty</string>
    <string name="create_playlist">Utwórz listę</string>
    <string name="open_pdf">Otwórz śpiewnik w pliku PDF</string>
    <string name="show_added_songs">Wyświetl listę utworów dodanych do śpiewnika</string>
    <string name="show_playlists">Wyświetl zapisane playlisty</string>
    <string name="show_chords">Pokazuj chwyty</string>
    <string name="hide_chords">Ukrywaj chwyty</string>
    <string name="cd_open_popup_menu">Pokaż dodatkowe opcje</string>
    <string name="category_all">Wszystkie</string>
    <string name="category_favourites">Ulubione</string>
    <string name="category_francis">Franciszkańskie</string>
    <string name="category_holy_spirit">Duch Święty</string>
    <string name="category_communion">Komunia</string>
    <string name="category_worship">Uwielbienie</string>
    <string name="category_adoration">Adoracja</string>
    <string name="category_atonement">Pokutne i postne</string>
    <string name="category_easter">Wielkanocne</string>
    <string name="category_advent">Adwentowe</string>
    <string name="category_mary">Maryjne</string>
    <string name="category_gifts">Przygotowanie darów</string>
    <string name="category_kids">Dla dzieci</string>
    <string name="category_carols">Kolędy</string>
    <string name="add_song">Dodawanie utworu</string>
    <string name="edit_song">Edycja utworu</string>
    <string name="delete_song">Usuwanie utworu</string>
    <string name="select_topics">Wybierz tematy:</string>
    <string name="song_saved">Zapisano dane o utworze</string>
    <string name="song_title">Tytuł</string>
    <string name="song_text">Tekst utworu</string>
    <string name="song_chords">Akordy</string>
    <string name="show_preview">Pokaż podgląd</string>
    <string name="song_delete_dialog_msg">Jesteś pewny usunięcia tego utworu?</string>
    <string name="my_songs">Moje utwory</string>
    <string name="empty_user_songs_list">Nie dodano jeszcze żadnych utworów!</string>
    <string name="my_playlists">Moje playlisty</string>
    <plurals name="playlist_song_count">
        <item quantity="one">%d utwór</item>
        <item quantity="few">%d utwory</item>
        <item quantity="other">%d utworów</item>
    </plurals>
    <string name="empty_playlists_list">Nie utworzono żadnej playlisty!\nJeśli chcesz, powyżej znajduje się możliwość utworzenia playlisty.</string>
    <string name="empty_playlist">Do tej playlisty nie przypisano żadnych utworów!</string>
    <string name="edit_playlist">Edytowanie playlisty</string>
    <string name="delete_playlist">Usuwanie playlisty</string>
    <string name="delete_playlist_dialog_msg">Jesteś pewny usunięcia tej listy?</string>
    <string name="share_playlist">Udostępnianie listy</string>
    <string name="share_playlist_dialog_msg">Wyślij poniższy kod żeby udostępnić playlistę:</string>
    <string name="share_empty_list_error">Nie można udostępnić listy bez utworów!</string>
    <string name="import_playlist">Pobieranie listy</string>
    <string name="import_btn">Pobierz</string>
    <string name="playlist_code">Kod listy</string>
    <string name="import_playlist_dialog_msg">Wpisz otrzymany kod poniżej:</string>
</resources>