<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sign_in"
        android:title="@string/sign_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ask_for_pray"
        android:title="@string/ask_for_pray"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report_error"
        android:title="@string/report_error"
        app:showAsAction="never" />
</menu>